--- a/.htaccess
+++ b/.htaccess
@@ -1,41 +1,2 @@
-RewriteEngine on
+Redirect 301 blogs/flightticket.html blogs/flightticket
 
-Redirect 301 /flightticket.html /flightticket
-
-RewriteCond %{REQUEST_FILENAME} !-d
-
-RewriteCond %{REQUEST_FILENAME}/.html -F
-
-RewriteRule ^(.*)$ $1.html [NC,L]
-
-
-RewriteCond %{HTTP_HOST} ^[^.]+\.[^.]+$
-RewriteCond %{HTTPS}s ^on(s)|
-
-RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-
-<IfModule mod_expires.c>
-  ExpiresActive On
-
-  # Images
-  ExpiresByType image/jpeg "access plus 1 week"
-  ExpiresByType image/gif "access plus 1 year"
-  ExpiresByType image/png "access plus 1 week"
-  ExpiresByType image/webp "access plus 1 week"
-  ExpiresByType image/svg+xml "access plus 1 year"
-  ExpiresByType image/x-icon "access plus 1 year"
-
-  # Video
-  ExpiresByType video/mp4 "access plus 1 year"
-  ExpiresByType video/mpeg "access plus 1 year"
-
-  # CSS, JavaScript
-  ExpiresByType text/css "access plus 1 week"
-  ExpiresByType text/javascript "access plus 1 week"
-  ExpiresByType application/javascript "access plus 1 week"
-
-  # Others
-  ExpiresByType application/pdf "access plus 1 month"
-  ExpiresByType application/x-shockwave-flash "access plus 1 month"
-</IfModule>
